add download button and new design for upload
TODO: Allow drag and drop for images

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,6 +40,7 @@
                   @submit="$event.preventDefault();"
                   x-data="{
                       file: false,
+                      compressedFile: false,
                       files: [],
                       formData: null,
                       previewImage: null,
@@ -71,6 +72,7 @@
                             })
                             .then(response => {
                                 this.compressedImage = 'data:image/png;base64,' + response.data.image;
+                                this.compressedFile = true;
                                 <!-- console.log(response.data); -->
                             })
                             .catch(error => {
@@ -80,20 +82,40 @@
                   }"
                   enctype="multipart/form-data">
 
-                <input type="text" name="alex">
-
-                <input type="file" name="file" x-ref="fileInput" x-on:change="fileInputChanged($event)">
+                <div x-show="!file" class="w-full">
+                    <div class="flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
+                        <div class="flex flex-col gap-3 text-center text-md">
+                            <svg class="mx-auto size-20 text-gray-300" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z" clip-rule="evenodd" />
+                            </svg>
+                            <div class="flex items-center leading-6 gap-x-1.5 text-gray-600">
+                                <label for="file-upload" class="relative cursor-pointer rounded-md bg-white font-semibold text-blue-600 hover:text-blue-500">
+                                    <span>Upload a file</span>
+                                    <input class="sr-only" id="file-upload" type="file" name="file" x-ref="fileInput" x-on:change="fileInputChanged($event)">
+                                </label>
+                                <p class="!m-0">or drag and drop</p>
+                            </div>
+                            <p class="text-sm leading-5 text-gray-600">PNG, JPG, GIF up to 10MB</p>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="flex justify-center gap-8">
-                    <img x-show="previewImage" :src="previewImage" alt="Preview Image" class="w-1/2 h-auto">
-                    <img x-show="compressedImage" :src="compressedImage" alt="Compressed Image" class="w-1/2 h-auto">
+                    <img x-show="previewImage" :src="previewImage" alt="Preview Image" class="w-1/2 h-auto !m-0">
+                    <img x-show="compressedImage" :src="compressedImage" alt="Compressed Image" class="w-1/2 h-auto !m-0">
                 </div>
-                <p x-text="file ? 'File has been uploaded.' : 'No file uploaded yet.'"></p>
 
-                <button class="mt-4 py-3 px-6 bg-red-100"
+                <p x-text="file ? 'File has been uploaded.' : ''"></p>
+
+                <button x-show="!compressedFile" class="mt-4 py-3 px-6 bg-red-100"
                         type="submit"
-                    @click="submit()">
+                        @click="submit()">
                     Compress Image
+                </button>
+
+                <button x-show="compressedFile" class="py-3 px-6 bg-red-300"
+                        type="submit" @click="download()">
+                    Download Image
                 </button>
             </form>
         </div>
