add dragover to file uploading and updated layout for image displaying

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,6 +40,7 @@
                   @submit="$event.preventDefault();"
                   x-data="{
                       file: false,
+                      dragover: false,
                       compressedFile: false,
                       files: [],
                       formData: null,
@@ -49,7 +50,15 @@
                         files = Object.values($event.target.files)
                         this.file = files[0]
                         this.previewImage = URL.createObjectURL(this.file)
-                        console.log(this.file.name)
+                        // console.log(this.file.name);
+                      },
+                      handleDrop: function($event) {
+                          $event.preventDefault();
+                          if($event.dataTransfer.items[0].kind === 'file'){
+                            this.file = $event.dataTransfer.items[0].getAsFile();
+                            this.previewImage = URL.createObjectURL(this.file);
+                            // console.log(this.file.name);
+                          }
                       },
                       submit() {
                         if (!this.file) {
@@ -83,7 +92,8 @@
                   enctype="multipart/form-data">
 
                 <div x-show="!file" class="w-full">
-                    <div class="flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
+                    <div x-on:dragover.prevent x-on:drop="handleDrop($event)"
+                         class="flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
                         <div class="flex flex-col gap-3 text-center text-md">
                             <svg class="mx-auto size-20 text-gray-300" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z" clip-rule="evenodd" />
@@ -100,12 +110,22 @@
                     </div>
                 </div>
 
-                <div class="flex justify-center gap-8">
-                    <img x-show="previewImage" :src="previewImage" alt="Preview Image" class="w-1/2 h-auto !m-0">
-                    <img x-show="compressedImage" :src="compressedImage" alt="Compressed Image" class="w-1/2 h-auto !m-0">
-                </div>
+                <div x-bind:class="{ 'grid-cols-2': compressedImage }" class="grid gap-y-5 gap-x-3 text-xl font-semibold">
+                    <div x-show="previewImage" class="text-center">
+                        <p class="!m-0">Uploaded Image</p>
+                    </div>
 
-                <p x-text="file ? 'File has been uploaded.' : ''"></p>
+                    <div x-show="compressedImage" class="text-center">
+                        <p class="!m-0">Compressed Image</p>
+                    </div>
+
+                    <div class="flex justify-center w-full">
+                        <img x-bind:class="{ 'w-1/2': !compressedImage }" x-show="previewImage" :src="previewImage" alt="Preview Image" class="h-auto !m-0">
+                    </div>
+
+                    <img x-cloak x-show="compressedImage" :src="compressedImage" alt="Compressed Image" class="flex justify-center h-auto !m-0">
+                </div>
+                <div class="grid grid-cols-2"></div>
 
                 <button x-show="!compressedFile" class="mt-4 py-3 px-6 bg-red-100"
                         type="submit"
@@ -113,7 +133,7 @@
                     Compress Image
                 </button>
 
-                <button x-show="compressedFile" class="py-3 px-6 bg-red-300"
+                <button x-show="compressedFile" class="mt-4 py-3 px-6 bg-red-300"
                         type="submit" @click="download()">
                     Download Image
                 </button>
